<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="250dp"
    android:elevation="5dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:background="#fff"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="195dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="182dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="46dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macbook_air_13_inch_apple_m1_chip_256gb_gold"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </HorizontalScrollView>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="191dp"
            android:layout_height="169dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="74dp"
            app:srcCompat="@drawable/laptop3"
            android:contentDescription="@string/item_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="125dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="206dp"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="8dp"
            android:text="@string/r_13_000"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="37dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="138dp"
            android:layout_marginTop="201dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_added"
            android:contentDescription="@string/item_image" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>